--- a/001.HTML학습/01.info_PJ/css/common.css
+++ b/001.HTML학습/01.info_PJ/css/common.css
@@ -170,8 +170,9 @@ body {
 }
 
 /* 2.메인영역 */
-.cont img {
-    /* 메인영역 이미지 */
+.cont>img {
+    /* 메인영역 이미지 
+    -> 메인의 .cont 직계자식 img만 적용되게함!*/
     width: 100%;
     /* 한족만 크기를 주면 이미지는 자동으로 비율유지를 하면서 변경된다! 100%는 부모박스를 채움! */
 }
