복습, 오타수정

--- a/001.HTML학습/01.info_PJ/css/common.css
+++ b/001.HTML학습/01.info_PJ/css/common.css
@@ -119,7 +119,7 @@ body {
     /* font-style: normal; */
     /*  font-style: italic; */
     /* 2. 글자두께 fw:
-        font-weitght
+        font-weight
         normal : 두께없음
         bold : 두껍게*/
     font-weight: normal;
