--- a/001.HTML학습/01.info_PJ/css/common.css
+++ b/001.HTML학습/01.info_PJ/css/common.css
@@ -64,6 +64,8 @@ body {
 body {
     /* 하단패딩 pb */
     padding-bottom: 50px;
+    /* 글자체 ff */
+    font-family: 'Gowun Batang';
 }
 
 /* 박스공통 클래스 .bx*/
