--- a/001.HTML학습/01.info_PJ/css/common.css
+++ b/001.HTML학습/01.info_PJ/css/common.css
@@ -68,6 +68,14 @@ body {
     font-family: 'Gowun Batang';
 }
 
+/* 전체 a요소 공통 셋팅  */
+a {
+    /* 글자색 */
+    color: #222;
+    /* 밑줄없앰 tdn */
+    text-decoration: none;
+}
+
 /* 박스공통 클래스 .bx*/
 .bx {
     /* 1 가로크기 w 
