--- a/001.HTML학습/01.info_PJ/css/sub.css
+++ b/001.HTML학습/01.info_PJ/css/sub.css
@@ -61,8 +61,99 @@
     /* 글자색 :  */
     color: #333;
 }
-
-
 /* 2-4. 기사내용 */
+.arti p{
+    font-size: 17px;
+    /* 줄간격 : lh 
+    -> 주의 : 단위가 없으면 배수임 기준은 글자크기임*/
+    line-height: 1.7;
+    /* 양쪽패딩 : 위아래 양쪽*/
+    padding: 0 10px;
+    letter-spacing: 1px;
+    /* 글자 들여쓰기 ti
+    값 : 양수는 들여쓰기, 음수는 내어쓰기
+     text-indent: 20px; */
+}
+/* mark요소 변경 */
+.arti p mark{
+    /* 인라인을 블록으로 출신변경! */
+    display: block;
+    /* 글자크기 변경 */
+    font-size: 20px;
+    /* 줄간격 주기 */
+    line-height: 2;
+    /* 위아래, 양쪽패딩 */
+    padding: 20px 50px;
+    /* 배경색 bgc */
+    background-color: #ebebeb
+    /* 보더 위,아래
+    위(top), 아래(bottom), 왼쪽(left), 오른쪽(right)*/;
+    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
+    /* 중앙정렬 */
+    text-align: center;
+    /* 위아래 마진 */
+    margin: 15px 0;
+
+}
+/* p요소 아래 em요소 디자인 변경 */
+.arti p em{
+    /* 글자 그림자 ts : text-shadow
+    값: x축 y축 블러 색
+    블러는 그림자 경계흐림정도 */
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.712);
+    /* 이탤릭해제 : fsn */
+    font-style: normal;
+    /* 글자색 */
+    color: darkblue;
+    /* 글자두껍게 : fwb */
+    font-weight: bold;
+}
 /* 2-5. 기자정보 */
+.rpt {
+    /* display 출신변경하기
+    디자인 적용과 동시에 인라인특성인 글자만큼만 크기가 잡히도록 인라인블록으로 변경함 */
+    display: inline-block;
+    font-size: 14px;
+    /* 배경색 */
+    background-color: #eee;
+    /* 마진 */
+    margin: 15px 0;
+}
 /* 2-6. 기사원문 */
+/* 
+별도의 이름없이 구조로만 기사원문을 선택한다! 직계자식!
+ */
+.cont>h5{
+    /* 내부의 인라인요소 오른쪽 정렬 */
+    text-align: right;
+}
+.cont>h5>a{
+    /* 디자인 적용을 위해 display 변경! */
+    display: inline-block;
+    /* 기본없애기 */
+    margin: 20px 0;
+    padding: 0;
+    width: 70px;
+    height: 70px;
+    /* 테두리 bd */
+    border: 2px solid #dbdbdb;
+    /* 글자중앙 */
+    text-align: center;
+    /* 세로중앙 : 줄간격으로! */
+    line-height: 70px;
+    /* 모서리 둥글게하기 border-radius
+    brad -> 원 */
+    border-radius: 50%;
+    /* 배경생 bgc */
+    background-color: lightsteelblue;
+}
+
+/* 가상클래스로 오버시 박스그림자 넣기 */
+.cont>h5>a:hover{
+    /* 박스그림자 
+    box-shadow: x y blur spread 색
+    inset은 내부그림자 
+    - spread 박스그림자 크기(필요 시 씀)*/
+    box-shadow: 0 0 5px darkblue;
+}
