--- a/001.HTML학습/01.info_PJ/css/sub.css
+++ b/001.HTML학습/01.info_PJ/css/sub.css
@@ -69,10 +69,12 @@
     line-height: 1.7;
     /* 양쪽패딩 : 위아래 양쪽*/
     padding: 0 10px;
-    letter-spacing: 1px;
     /* 글자 들여쓰기 ti
     값 : 양수는 들여쓰기, 음수는 내어쓰기
-     text-indent: 20px; */
+    text-indent: 20px; */
+    letter-spacing: 1px;
+    /* 양쪽정렬 */
+    text-align: justify;
 }
 /* mark요소 변경 */
 .arti p mark{
@@ -156,4 +158,106 @@
     inset은 내부그림자 
     - spread 박스그림자 크기(필요 시 씀)*/
     box-shadow: 0 0 5px darkblue;
+}
+
+/* 메인 공통 article 박스 디자인 */
+.cont article {
+    margin-top: 40px;
+    padding: 15px;
+    /* 구분선 보더 위 */
+    border-top: 2px dashed #ccc;    
+}
+
+/* 각 파트별 공통 타이틀 */
+/* 기사관련 타이틀 h3 */
+.cont h3 {
+    /* 글자체 : 웹폰트 */
+    font-family: 'Gugi', cursive;
+    /* 글자두께 : 얇게 fwn */
+    font-weight: normal;
+    /* 글자크기 : fz */
+    font-size : 26px;
+    /* 글자 들여쓰기 : ti */
+    text-indent: 20px;
+    /* 글자색 */
+    color: #333;
+}
+
+/* 기사고나련 타이틀 h5 */
+/* .cont>h5와 구분하기 위해 중간경로 article씀 */
+.cont article h5 {
+    /* 글자두께 : 얇게 fwn */
+    font-weight: normal;
+    /* 글자크기 : fz */
+    font-size : 20px;
+    /* 내부 그림자 
+    inset은 내부 그림자 설정 */
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+    /* 글자 들여쓰기 : ti */
+    /* text-indent: 20px; */
+    /* 헤딩요소 기본마진 없앰! */
+    margin: 0;
+    /* 글자색 */
+    color: #333;
+    /* 패딩 : 위아래 양쪽 */
+    padding: 10px 20px;
+    display: inline-block;
+    border-radius: 20px;
+    /* 배경색 */
+    background-color: #ebebeb;
+}
+
+/* 주해박스 */
+.desc div {
+    padding: 20px 5px 0;
+    line-height: 1.8;
+    /* 자간 : ls */
+    letter-spacing: 1px;
+    /* 양쪽정렬 */
+    text-align: justify;
+}
+/* 인용박스 */
+.qb blockquote {
+    /* 기본 마진 없앰 */
+    margin: 0;
+    padding: 20px 5px 0;
+    line-height: 1.5;
+    /* 자간 : ls */
+    /* letter-spacing: 1px; */
+    /* 양쪽정렬 */
+    text-align: justify;
+    /* 글자크기 : fz */
+    font-size: 14px;
+}
+
+/* 오늘의 작품 & 느낌 */
+.work {
+    /* 글자중앙 : tac */
+    text-align: center;
+    /* 배경색 */
+    /* background-color: lightpink; */
+    /* 그라데이션 -> 이미지로 bgi */
+    background-image: 
+    linear-gradient(to top, red, yellow, blue);
+    /* linear-gradient(방향, 색1 %, 색2 %, ...); 
+    방향 : to top, to bottom, to left, to right
+    (방향에 각도를 쓰면 그라데이션 각도가 표현됨
+    -> 방향대신 각도 : 수치 deg(예:45deg)
+    * 색상을 콤마로 나영하면 등분할 하여 그라데이션 표현되고 색상뒤에 %수치를 쓰면 특정비율을 나타낼 수 있다!
+    */
+    /* 배경옵션 추가!!
+    background-clip : 배경이 적용되는 범위설정
+    1. border-box -> 보더까지 적용(기본값)
+    2. padding- box -> 패딩까지 적용
+    3. content-box -> 내용영역만 적용(패딩, 보더빠짐) */
+    background-clip: content-box;
+}
+
+/* 작품명 */
+.work figcaption {
+    font-family:'Single Day', cursive;
+}
+.work figcaption cite{
+    /* 기본 이탤릭 해제 : fsn */
+    font-style: normal;
 }
