--- a/001.HTML학습/01.info_PJ/css/sub.css
+++ b/001.HTML학습/01.info_PJ/css/sub.css
@@ -261,3 +261,69 @@
     /* 기본 이탤릭 해제 : fsn */
     font-style: normal;
 }
+/* 작품이미지 */
+.work img{
+    border: 10px ridge goldenrod;
+}
+
+/* 파트별 a링크 요소 공통 디자인 */
+.cont article a{
+    /* 글자크기 fz */
+    font-size: 17px;
+    /* 줄간격 lh */
+    line-height: 2.5;
+    /* 자간 ls */
+    letter-spacing: -1px;
+}
+
+/* 가상클래스 hover 오버시 */
+.cont article a:hover{
+    color: greenyellow;
+    /* 글자그림자 ts */
+    text-shadow: 1px 1px 1px #000;
+}
+
+/* 공통 ul */
+.cont article ul{
+    /* 리스트타입 : lit */
+    list-style-type: "🤑";
+    /* square 사각형, disc 원형, circle 빈원
+    -> 따옴표안에 다른 문자형을 넣을 수 있음
+    -> 윈도우키+점(.) -> 아이콘 넣기 */
+}
+/* 공통 ol */
+.cont article ol {
+    /* 숫자형 리스트 스타일 lit */
+    list-style-type: upper-roman;
+    /* upper-roman 로마자 대문자 */
+    /* 순서를 표시하는 종류는 너무 많다! */
+}
+
+/* 주요뉴스 li별 글자색 변경하기 */
+/* 
+    [자식요소 선택 가상클래스 : 자식요소 종류가 같아야함!]
+    요소 : first-child - 첫번째 자식요소    
+    요소 : nth-child(n) - n번째 자식요소    
+    요소 : last-child - 마지막번째 자식요소    
+*/
+.cont article ul li:first-child a{
+    color: red;
+}
+.cont article ul li:nth-child(2) a{
+    color: green;
+}
+.cont article ul li:last-child a{
+    color: blue;
+}
+.cont article ol li,
+.cont article ul li{
+    /* 패딩 left : 블릿 뒤쪽이 적용됨 */
+    padding-left: 10px;
+}
+
+/* 
+    [css적용 우선순위]
+    type < class < id < inline < !important
+    -> 더 쎈 선택자일지라도 부모요소를 업고 있는 것이 더 쎄다!
+    예) #my << .cont .my
+*/
