--- a/001.HTML학습/01.info_PJ/css/sub.css
+++ b/001.HTML학습/01.info_PJ/css/sub.css
@@ -327,3 +327,55 @@
     -> 더 쎈 선택자일지라도 부모요소를 업고 있는 것이 더 쎄다!
     예) #my << .cont .my
 */
+
+/* 분야별뉴스 */
+/* 각 분야명 dt 공통 디자인 */
+.secnews dt{
+    /* 글자체 : 웹폰트 */
+    font-family: 'Gugi', cursive;
+    /* 글자 크기만큼 디자인적용위해 dib */
+    display: inline-block;
+    /* 보더 bd */
+    border: 5px dashed darkolivegreen;
+    /* 패딩 p */
+    padding: 10px;
+    /* 둥근모서리 : 원 50% */
+    border-radius: 50%;
+    /* 글자크기 : fz */
+    font-size: 20px;
+    /* 왼족마진으로 이동하기 */
+    margin-left: 20px;
+    /* 박스그림자 : bsh
+    (inset) x t blur spread 색 */
+    box-shadow: 0px 0px 5px 5px rgba(162, 85, 185, 0.445);
+
+}
+/* 앞에 dd가 있는 dt만 마진탑 밀기 */
+.secnews dd+dt {
+    /* 마진탑 밀기 */
+    margin-top: 20px;
+}
+
+/* 
+    [여러종류가 섞여 있을 경우 형제 선택하기]
+    요소: first-of-type -> 같은 요소 중 첫번째
+    요소: nth-of-type(n) -> 같은 요소 중 n번째
+    요소: last-of-type -> 같은 요소 중 마지막번째
+*/
+/* dt 글자색 다르게 하기 */
+/* dt는 형제중 dd가 섞여 있어서 -of-type을 사용! */
+.secnews dt:first-of-type {
+    color: blue;
+}
+.secnews dt:nth-of-type(2) {
+    color: blueviolet;
+}
+.secnews dt:last-of-type {
+    color: burlywood;
+}
+
+/* dd공통 */
+.secnews dd{
+    /* 왼쪽마진 ml */
+    margin-left: 100px;
+}
