--- a/001.HTML학습/01.info_PJ/css/sub.css
+++ b/001.HTML학습/01.info_PJ/css/sub.css
@@ -379,3 +379,55 @@
     /* 왼쪽마진 ml */
     margin-left: 100px;
 }
+
+/* 사진뉴스 테이블 박스  */
+.pnews table{
+    /* 가로중앙이동 : 마영오씨 
+    -> 블록요소 또는 table에 적용된다! */
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    /* 테이블 기본 사이간격 없애기 */
+    border-collapse: collapse;
+    /* seperate(기본값) */
+}
+
+/* 
+    tr이나 td에 child 선택자 사용가능
+    왜? 같은 종류의 요소만 올 수 있으므로
+*/
+/* 첫번째 td - 숫자부분 */
+.pnews td:first-child{
+    /* 가로크기 w */
+    width: 50px;
+    /* 세로크기 h */
+    height: 70px;
+    /* 인라인 가로중앙 */
+    text-align: center;
+    background-color: #ccc;
+}
+/* 두번째 td */
+.pnews td:nth-child(2){
+    background-color: #e4e4e4;
+    /* 양쪽 패딩 pl */
+    padding: 20px 20px;
+}
+/* 세번째 td */
+.pnews td:last-child{
+    background-color: #e4e4e4;
+    /* 오른쪽 패딩 */
+    padding-right: 7px;
+}
+
+/* 사진뉴스이미지 */
+.pnews img{
+    height: 70px;
+    /* 이미지는 한쪽만 크기줄때 나머지는 자동비율유지 */
+    /* 세로정렬 */
+    vertical-align: middle;
+    /* td에서만 세로정렬이 적용되고 일반적으로 vertical-align은 inline요소간 세로방향 정렬이다 */
+}
+/* 첫번째를 제외한 앞에 tr이 있는 tr만 하위 td에 디자인 */
+.pnews tr+tr td{
+    /* 보더탑 bdt */
+    border-top: 2px solid #ccc;
+}
