--- a/808.복습/01.적용/복습css.css
+++ b/808.복습/01.적용/복습css.css
@@ -4,20 +4,24 @@
     border: 3px dotted red;
     background-color: rgb(66, 64, 64);
     color: white;
-    ts
-
+    height: auto;
 }
 
 .head_wrap{
     border: 3px dotted green;
     text-align: center;
     word-spacing: 50px;
+    height: 50px;
+    
+    
 
 }
 .side_bar{
-    margin: 0;
-    text-align: center;
     border: 2px dotted lightblue;
+    width: 200px;
+    line-height: 30px;
+    margin-left: auto;
+    margin-top: 300px;
 }
 
 .wrap{
@@ -26,12 +30,41 @@
 
 .chap_list{
     border: 3px dotted violet;
+    margin-top: 243px;
 }
 
 .chap_list_wrap_title{
     border: 2px dotted orange;
+    text-align: center;
+    width: 100px;
+    /* line-height: 30px; */
 }
 
 a{
     color: white;
+    line-height: 50px;
 }
+
+ul{
+    list-style: none;
+    text-align: center;
+    overflow: hidden;
+}
+
+body {
+    padding: 0px;
+    margin: 0px;
+}
+
+/* .jb-box {
+width: 100%;
+height: 1000px;
+overflow: hidden;
+margin: 0px auto;
+position: relative;
+ 
+}
+video {
+width: 100%;
+z-index: -1;
+} */
