--- a/808.복습/01.적용/복습css.css
+++ b/808.복습/01.적용/복습css.css
@@ -2,6 +2,7 @@
 body {
     margin: 0px;
     height: auto;
+    outline: gray;
 }
 
 #myVideo {
@@ -27,9 +28,24 @@ body {
     background: rgba(0, 0, 0, 0.493);
 }
 
+.menu {
+    margin: 0;
+    padding: 0;
+    height: 114px;
+
+}
+
+.menu img{
+    position: relative;
+    top: 10px;
+    max-width: 200px;
+    min-width: 150px;
+}
+
 .head_wrap a{
     line-height: 104px;
     font-size: 25px;
+    text-decoration-line: none;
 }
 
 
