--- a/808.복습/01.적용/복습css.css
+++ b/808.복습/01.적용/복습css.css
@@ -5,6 +5,7 @@ body {
     outline: gray;
 }
 
+
 #myVideo {
     position: fixed;
     right: 0%;
@@ -18,6 +19,7 @@ body {
     bottom: 0;
     border: 3px dotted red;
     color: white;
+    height: 100%;
 }
 
 .head_wrap{
