--- a/001.HTML학습/03.Robot_PJ/css/Robot.css
+++ b/001.HTML학습/03.Robot_PJ/css/Robot.css
@@ -41,10 +41,11 @@ body * {
     position: relative;
     /* 부모자격 - 하위 div들 */
     width: 250px;
-    height: 250px;
+    height: 150px;
     /* 마영오 */
     margin: 0 auto;
-    border-radius: 10% 10% 50% 50%;
+    /* clip-path: polygon(0 0,0 50%,30% 100%, 60% 100%,100% 50%,100% 0); */
+    /* border-radius: 10% 10% 50% 50%; */
 }
 /* 로봇머리 직계하위 div는 모두 앱솔루트 */
 .head>div{
@@ -63,7 +64,7 @@ body * {
     background: url(../images/hair.png) no-repeat 0/100% 100%;
     z-index: 1;
 }
-.head::after{
+/* .head::{
     content: '';
     display: block;
     position: absolute;
@@ -73,6 +74,32 @@ body * {
     height: 46px;
     background: url(../images/glasses.png) no-repeat 0/100% 100%;
     z-index: 1;
+} */
+
+/* 머리박스에 오버시 가상요소 가발변경하기 */
+.head:hover::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: -65px;
+    left: -30px;
+    width: 300px;
+    height: 200px;
+    background: url(../images/hair2.png) no-repeat 0/100% 100%;
+}
+/* 머리박스 가상요소로 턱만들기 */
+.head::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    /* 부모박스 높이만큼 밀어준다! */
+    z-index: -1;
+    width: 250px;
+    height: 100px;
+    background-color: #cfc8b2;
+    clip-path: polygon(0 0,33% 100%,66% 100%,100% 0);
+    box-shadow: 0 10px 50x #000;
 }
 
 /* 눈공통 */
@@ -115,12 +142,40 @@ body * {
 }
 /* 입 */
 .mouth{
-    bottom: 45px;
+    top: 165px;
     left: 62.5px;
     width: 125px;
     height: 50px;
     background: url(../images/mouth.png) no-repeat 0/100% 100%;
 }
+
+/* 입옆에 별모양점 가상요소로 만들기 */
+.mouth::before,.mouth::after{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: -25px;
+    left: 100px;
+    background-color: rgb(223, 102, 102);
+
+    /* 삼각형 클리핑 속성으로 만들기 */
+    clip-path: polygon(0 100%,50% 0,100% 100%);
+}
+.mouth::after{
+    transform: rotate(180deg) translateY(-30%);
+}
+
+/* 
+    [  CSS 클리핑 속성  ]
+    -> clip-path : polygon(x1 y1,x2 y2,...)
+    -> 각 좌표쌍은 띄어쓰기로 각 점은 콤마로 구분
+    -> 각 점을 연결하여 도형모양만 출력한다!
+    -> px은 각 도형 크기 내부의 수치로 쓰고
+    %는 도형을 기준한 위치를 %로 나타낸다!
+*/
+
 /* 귀공통 */
 .ear{
     top: 80px;
@@ -137,6 +192,64 @@ body * {
     right: -20px;
     border-radius: 0 50% 50% 0;
 }
+
+/* 로봇몸통 */
+.body{
+    position: relative;
+    /* 부모자격 - 하위 직계 div들 */
+    width: 200px;
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 120px;
+}
+/* 몸통 하위 직계 div 모두 앱솔루트! */
+.body>div{
+    position: absolute;
+}
+/* 몸통 가상요소로 상단만들기 */
+.body::before{
+    content: '';
+    display: block;
+    position: absolute;
+    left: -50px;
+    width: 300px;
+    height: 180px;
+    background-image: linear-gradient(45deg, #d16969, #d124e0, #946ae0);
+    background-color: #fff;
+    clip-path: polygon();
+}
+/* 몸통 가상요소로 하단만들기 */
+.body::after{
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: -5px;
+    width: 210px;
+    height: 150px;
+    /* 그라데이션 */
+    background-image: linear-gradient(45deg,#d124e0,#946ae0,#d16969 );
+    background-color: #fff;
+    clip-path: polygon(0 0, 100% 0, 66% 100%, 29% 100%);
+}
+
+/* 목 */
+.neck{
+    top: -20px;
+    left: 75px;
+    width: 50px;
+    height: 20px;
+    border-radius: 0 0 10px 10px;
+}
+/* 왼팔 */
+/* 오른팔 */
+/* 왼다리 */
+/* 오른다리 */
+/* 왼어깨 */
+/* 오른어깨 */
+/* TV */
+
+
 /*********************** 3. 하단영역 ***********************/
 
 
