--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/css/common.css
@@ -2,8 +2,60 @@
 /* 공통모듈 디자인 CSS - common.css
 -> 상단영역, 하단영역 디자인 */
 /***************** 1.상단영역 *****************/
+/* 겉박스 */
+#top{
+    background-color: #fff;
+}
+/* 속박스 */
 .top{
+    position: relative;
+    /* 부모자격 - .tmenu */
     height: 128px;
+}
+/* 1-1.로고 */
+h1.logo{
+    /* text-align: center 도 가능 */
+    width: 100px;
+    margin: 0 auto;
+    padding-top: 20px;
+    outline: 1px solid red;
+}
+/* 로고 이미지 */
+.logo img{
+    width: 100px;
+}
+/* 1-2. GNB메뉴 */
+nav.gnb ul{
+    /* 플렉스박스: 흐르게할 요소의 '직계부모' */
+    display: flex;
+    /* 진행방향 정렬 */
+    justify-content: center;
+    /* 마진탑은 부모인 nav.gnb 바깥으로 나가서 위의 박스를 밀고 있다! */
+    margin-top: 10px;
+}
+/* GNB a요소 */
+.gnb>ul>li>a{
+    color: #222;
+    text-decoration: none;
+    line-height: 40px;
+    margin: 0 10px;
+}
+/* 1-3.탑메뉴 */
+aside.tmenu{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    /* 부모는? -> .top */
+}
+/* 회원가입 등 메뉴 박스 */
+.tmenu ul{
+    /* 플렉스 박스 : 하위 li요소 옆으로 흐름! */
+    display: flex;
+}
+/* sns 메뉴 박스 */
+.tmenu ol{
+    /* 플렉스 박스 : 하위 li요소 옆으로 흐름! */
+    display: flex;
 }
 /***************** 2.메인영역 *****************/
 .cont{
